--- a/resources/sass/pages/services/content.scss
+++ b/resources/sass/pages/services/content.scss
@@ -70,6 +70,10 @@
                         flex: 0 1 calc(50% - 1rem);
                     }
 
+                    @include mobile {
+                        flex: 0 1 100%;
+                    }
+
                     .services-single-icon {
                         width: 100px;
                         filter: drop-shadow(0px 0px 3px $dark-black) saturate(0.9);
