--- a/public/css/lity.css
+++ b/public/css/lity.css
@@ -81,11 +81,14 @@
     max-width: 100%;
     max-height: 100%;
     outline: none !important;
+    width: 70%;
 }
+
+
 
 .lity-content {
     z-index: 9993;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -97,6 +100,18 @@
     transition: transform 0.3s ease;
     transition: transform 0.3s ease, -webkit-transform 0.3s ease, -o-transform 0.3s ease;
 }
+
+/* About work modal */
+.lity-content>.about-work-modal {
+    width: 100%;
+}
+
+
+/*  modal */
+.lity-content>.operator-modal {
+    width: 100%;
+}
+
 
 .lity-content .modalbox {
     position: relative;
@@ -146,6 +161,56 @@
     }
 }
 
+.modal-center .contact-form {
+    height: 100%;
+    background: #fcfcfc 29;
+    flex: 0 1 calc(35% - 1rem);
+    padding: 3rem;
+}
+
+.modal-center .contact-form .input-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.modal-center .contact-form .input-form label {
+    padding: 0.4rem 0;
+    color: #21546e;
+    font-size: 1.25rem;
+    font-family: 'Bebas Neue', cursive;
+}
+
+.modal-center .contact-form .input-form input[type] {
+    height: 2.1rem;
+    border: none;
+    padding: 0.7rem;
+    color: #21546e;
+}
+
+.modal-center .contact-form .input-form input[type]:focus {
+    outline: #f06037;
+}
+
+.modal-center .contact-form .input-form ::placeholder {
+    color: #21546e 41;
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 0.1rem;
+}
+
+.modal-center .contact-form .input-form textarea {
+    height: auto;
+    color: #21546e;
+    padding: 0.7rem;
+    border: none;
+}
+
+.modal-center .contact-form .input-form textarea:focus {
+    outline: #f06037;
+
+}
+
 .lity-content .modalbox .modal-bottom .modal-bottom-img {
     width: 300px;
 }
@@ -156,6 +221,53 @@
 
 .lity-content .modalbox .modal-top .modal-center {
     width: 300px;
+}
+
+.about-work-modal {
+    height: 100%;
+    background: #fcfcfc 29;
+    flex: 0 1 calc(35% - 1rem);
+    padding: 3rem;
+}
+
+.contact-form .input-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.contact-form .input-form label {
+    padding: 0.4rem 0;
+    color: blue;
+    font-size: 1.25rem;
+}
+
+.contact-form .input-form input[type] {
+    height: 2.1rem;
+    border: none;
+    padding: 0.7rem;
+    color: blue;
+}
+
+.contact-form .input-form input[type]:focus {
+    outline: orange;
+}
+
+.contact-form .input-form ::placeholder {
+    color: #21546e 41;
+    letter-spacing: 0.1rem;
+}
+
+.contact-form .input-form textarea {
+    height: auto;
+    color: blue;
+    padding: 0.7rem;
+    border: none;
+}
+
+.contact-form .input-form textarea:focus {
+    outline: orange;
 }
 
 .lity-content .modalbox .modal-top .modal-top-right .modal-right-title {
