--- a/public/css/main.css
+++ b/public/css/main.css
@@ -692,7 +692,7 @@
   height: 60vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
   clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/slider1.jpg");
+  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/parking.jpg");
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -761,150 +761,26 @@
     transition: all 0.3s linear;
   }
 }
-.header-about .faq-title {
+.header-about .about-title {
   margin-top: 5rem;
-  font-size: 2.2rem;
+  font-size: 4rem;
+  font-family: "Bebas Neue", cursive;
   text-shadow: 0px 0px 5px #0f0f0f;
 }
 
-.about-content-wrap .about-content {
+.about-content-wrap {
   max-width: 70vw;
   margin: 0 auto;
 }
-.about-content-wrap .about-content .about-overtitle {
+.about-content-wrap .about-title {
   color: #337a94;
-  font-size: 1.2rem;
-  display: block;
-  padding-top: 3rem;
-  text-align: center;
-}
-.about-content-wrap .about-content .about-title {
-  color: #efefef;
   font-family: "Bebas Neue", cursive;
   line-height: 3.5rem;
   text-align: center;
   font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.about-content-wrap .about-content .about-title-advice {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  margin-top: 9rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.about-content-wrap .about-content .about-text {
-  margin-top: 2rem;
-  text-align: center;
-}
-.about-content-wrap .about-content .description-wrap {
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: space-between;
-}
-.about-content-wrap .about-content .description-wrap .description {
-  flex: 0 1 calc(50% - 1rem);
-}
-.about-content-wrap .about-content .process-wrap {
-  margin-top: 3rem;
-}
-.about-content-wrap .about-content .process-wrap .process-overtitle {
-  color: #337a94;
-  font-size: 1rem;
-  display: block;
-  padding-top: 3rem;
-  text-align: center;
-}
-.about-content-wrap .about-content .process-wrap .process-title {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.2rem;
-  text-align: center;
-  font-size: 4rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.about-content-wrap .about-content .process-wrap .process-container {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.about-content-wrap .about-content .process-wrap .process-container .process-single {
-  flex: 0 1 calc(50% - 1rem);
-  background: #27272778;
-  padding: 2rem;
-  position: relative;
-  border-radius: 2px;
-  text-align: center;
-  margin-top: 1rem;
-}
-.about-content-wrap .about-content .process-wrap .process-container .process-single .process-single-icon {
-  width: 100px;
-  filter: drop-shadow(0px 0px 3px #0f0f0f) saturate(0.9);
-}
-.about-content-wrap .about-content .about-pricing {
   margin-top: 5rem;
-  position: relative;
-  overflow: hidden;
-}
-.about-content-wrap .about-content .about-pricing .bg-effect {
-  background: url("/assets/images/about1.jpg");
-  background-size: cover;
-  -moz-filter: blur(13px);
-  -o-filter: blur(13px);
-  -ms-filter: blur(13px);
-  filter: blur(2px) brightness(0.3) opacity(0.7);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-.about-content-wrap .about-content .about-pricing table {
-  width: 100%;
-  table-layout: fixed;
-}
-.about-content-wrap .about-content .about-pricing .tbl-header {
-  background-color: #27272778;
-  color: blue;
-  font-size: 50px;
-  font-weight: bold;
-  position: relative;
-  z-index: 9999;
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(13px);
-  filter: blur(0px);
-}
-.about-content-wrap .about-content .about-pricing .tbl-content {
-  margin-top: 0px;
-  border: none;
-  color: blue;
-  font-size: 50px;
-  font-weight: bold;
-  position: relative;
-  z-index: 9999;
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(13px);
-  filter: blur(0px);
-}
-.about-content-wrap .about-content .about-pricing th {
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 1rem;
-  color: #fff;
-  text-transform: uppercase;
-}
-.about-content-wrap .about-content .about-pricing td {
-  padding: 15px;
-  text-align: left;
-  vertical-align: middle;
-  font-weight: 300;
-  font-size: 1rem;
-  color: #fff;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+  margin-bottom: 2rem;
+  text-shadow: 0px 0px 10px #efefef;
 }
 
 .header-careers {
