--- a/resources/sass/pages/about/content.scss
+++ b/resources/sass/pages/about/content.scss
@@ -1,166 +1,15 @@
 .about-content-wrap {
+    max-width: 70vw;
+    margin: 0 auto;
 
-    .about-content {
-        max-width: 70vw;
-        margin: 0 auto;
-
-        .about-overtitle {
-            color: $blue;
-            font-size: 1.2rem;
-            display: block;
-            padding-top: 3rem;
-            text-align: center;
-        }
-
-        .about-title {
-            color: $text-white;
-            font-family: $styled-text;
-            line-height: 3.5rem;
-            text-align: center;
-            font-size: 5rem;
-            text-shadow: 0px 0px 10px $dark-black;
-        }
-
-        .about-title-advice {
-            color: $text-white;
-            font-family: $styled-text;
-            line-height: 3.5rem;
-            text-align: center;
-            font-size: 5rem;
-            margin-top: 9rem;
-            text-shadow: 0px 0px 10px $dark-black;
-        }
-
-        .about-text {
-            margin-top: 2rem;
-            text-align: center;
-        }
-
-        .description-wrap {
-            margin-top: 2.5rem;
-            display: flex;
-            justify-content: space-between;
-
-            .description {
-                flex: 0 1 calc(50% - 1rem);
-            }
-        }
-
-        .process-wrap {
-            margin-top: 3rem;
-
-            .process-overtitle {
-                color: $blue;
-                font-size: 1rem;
-                display: block;
-                padding-top: 3rem;
-                text-align: center;
-            }
-
-            .process-title {
-                color: $text-white;
-                font-family: $styled-text;
-                line-height: 3.2rem;
-                text-align: center;
-                font-size: 4rem;
-                text-shadow: 0px 0px 10px $dark-black;
-            }
-
-            .process-container {
-                margin-top: 2rem;
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-
-                .process-single {
-                    flex: 0 1 calc(50% - 1rem);
-                    background: #27272778;
-                    padding: 2rem;
-                    position: relative;
-                    border-radius: 2px;
-                    text-align: center;
-                    margin-top: 1rem;
-
-                    .process-single-icon {
-                        width: 100px;
-                        filter: drop-shadow(0px 0px 3px $dark-black) saturate(0.9);
-                    }
-                }
-            }
-        }
-
-        .about-pricing {
-            margin-top: 5rem;
-            position: relative;
-            overflow: hidden;
-
-            .bg-effect {
-                background: url('/assets/images/about1.jpg');
-                background-size: cover;
-                -moz-filter: blur(13px);
-                -o-filter: blur(13px);
-                -ms-filter: blur(13px);
-                filter: blur(2px) brightness(0.3) opacity(0.7);
-                position: absolute;
-                width: 100%;
-                height: 100%;
-            }
-
-            table {
-                width: 100%;
-                table-layout: fixed;
-            }
-
-            .tbl-header {
-                background-color: #27272778;
-                color: blue;
-                font-size: 50px;
-                font-weight: bold;
-                position: relative;
-                z-index: 9999;
-                -webkit-filter: blur(0px);
-                -moz-filter: blur(0px);
-                -o-filter: blur(0px);
-                -ms-filter: blur(13px);
-                filter: blur(0px);
-            }
-
-            .tbl-content {
-                margin-top: 0px;
-                border: none;
-                color: blue;
-                font-size: 50px;
-                font-weight: bold;
-                position: relative;
-                z-index: 9999;
-                -webkit-filter: blur(0px);
-                -moz-filter: blur(0px);
-                -o-filter: blur(0px);
-                -ms-filter: blur(13px);
-                filter: blur(0px);
-            }
-
-            th {
-                padding: 20px 15px;
-                text-align: left;
-                font-weight: 500;
-                font-size: 1rem;
-                color: #fff;
-                text-transform: uppercase;
-            }
-
-            td {
-                padding: 15px;
-                text-align: left;
-                vertical-align: middle;
-                font-weight: 300;
-                font-size: 1rem;
-                color: #fff;
-                border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-            }
-
-        }
-
-
+    .about-title {
+        color: $blue;
+        font-family: $styled-text;
+        line-height: 3.5rem;
+        text-align: center;
+        font-size: 5rem;
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+        text-shadow: 0px 0px 10px $text-white;
     }
 }
