--- a/resources/sass/pages/homepage/cta.scss
+++ b/resources/sass/pages/homepage/cta.scss
@@ -67,7 +67,7 @@
             flex: 0 1 42%;
             height: 100%;
            background-image: linear-gradient(75deg, rgb(40 163 190 / 0%) -5%, rgb(79 222 223 / 51%) 40%, rgb(123 206 210 / 25%) 65%, rgb(18 106 126 / 98%) 90%),
-           url(/assets/images/banner.jpg);
+           url(/assets/images/homepage-story.jpg);
             background-size: cover;
             filter: grayscale(0.6);
             position: relative;
