--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,7 +183,7 @@
 .services-wrap {
   width: 100%;
   height: 55vh;
-  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url(/assets/images/road.jpg);
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url(/assets/images/homepage-services.jpg);
   background-position: 0% 82%;
   background-attachment: fixed;
 }
@@ -463,7 +463,7 @@
 .cta-wrap .cta-content .cta-right {
   flex: 0 1 42%;
   height: 100%;
-  background-image: linear-gradient(75deg, rgba(40, 163, 190, 0) -5%, rgba(79, 222, 223, 0.51) 40%, rgba(123, 206, 210, 0.25) 65%, rgba(18, 106, 126, 0.98) 90%), url(/assets/images/banner.jpg);
+  background-image: linear-gradient(75deg, rgba(40, 163, 190, 0) -5%, rgba(79, 222, 223, 0.51) 40%, rgba(123, 206, 210, 0.25) 65%, rgba(18, 106, 126, 0.98) 90%), url(/assets/images/homepage-story.jpg);
   background-size: cover;
   filter: grayscale(0.6);
   position: relative;
@@ -692,7 +692,8 @@
   height: 60vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
   clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/parking.jpg");
+  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/about-header.jpg");
+  background-position: 100% 80%;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -1267,7 +1268,7 @@
   height: 60vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
   clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(30, 87, 99, 0.37), rgba(255, 255, 255, 0.17)), url(/assets/images/night-road.jpg);
+  background-image: linear-gradient(to right bottom, rgba(30, 87, 99, 0.37), rgba(255, 255, 255, 0.17)), url(/assets/images/services-header.jpg);
   background-size: cover;
   display: flex;
   background-position: 100% 80%;
