--- a/resources/sass/pages/about/header.scss
+++ b/resources/sass/pages/about/header.scss
@@ -2,7 +2,8 @@
     height: 60vh;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
     clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-    background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/parking.jpg');
+    background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/about-header.jpg');
+    background-position: 100% 80%;
     background-size: cover;
     display: flex;
     flex-direction: column;
