--- a/resources/sass/pages/homepage/services.scss
+++ b/resources/sass/pages/homepage/services.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 55vh;
    background: linear-gradient(55deg, rgb(255 255 255 / 94%) 46%, rgb(12 95 99 / 58%) 100%),
-   url(/assets/images/road.jpg);
+   url(/assets/images/homepage-services.jpg);
    background-position: 0% 82%;
    background-attachment: fixed;
 
