--- a/resources/sass/pages/homepage/footer.scss
+++ b/resources/sass/pages/homepage/footer.scss
@@ -32,7 +32,7 @@
         }
 
         .footer-logo {
-            filter: invert(1);
+            filter: drop-shadow(0px 0px 1px white);
             text-align: center;
             width: 150px;
             display: block;
