--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,7 @@
 }
 .header .navigation-list .navigation-item .navigation-item-logo {
   width: 200px;
-  filter: invert(100%);
+  filter: drop-shadow(0px 0px 1px white);
 }
 @media (max-width: 426px) {
   .header .navigation-list {
@@ -682,7 +682,7 @@
   }
 }
 .footer-wrap .footer .footer-logo {
-  filter: invert(1);
+  filter: drop-shadow(0px 0px 1px white);
   text-align: center;
   width: 150px;
   display: block;
@@ -718,7 +718,7 @@
 }
 .header-about .navigation-list .navigation-item .navigation-item-logo {
   width: 200px;
-  filter: invert(100%);
+  filter: drop-shadow(0px 0px 1px white);
 }
 @media (max-width: 426px) {
   .header-about .navigation-list {
@@ -813,7 +813,7 @@
 }
 .header-careers .navigation-list .navigation-item .navigation-item-logo {
   width: 200px;
-  filter: invert(100%);
+  filter: drop-shadow(0px 0px 1px white);
 }
 @media (max-width: 426px) {
   .header-careers .navigation-list {
@@ -1294,7 +1294,7 @@
 }
 .header-services .navigation-list .navigation-item .navigation-item-logo {
   width: 200px;
-  filter: invert(100%);
+  filter: drop-shadow(0px 0px 1px white);
 }
 @media (max-width: 426px) {
   .header-services .navigation-list {
@@ -1549,7 +1549,7 @@
 }
 .header-contact .navigation-list .navigation-item .navigation-item-logo {
   width: 200px;
-  filter: invert(100%);
+  filter: drop-shadow(0px 0px 1px white);
 }
 @media (max-width: 426px) {
   .header-contact .navigation-list {
