--- a/resources/sass/helpers/_mixins.scss
+++ b/resources/sass/helpers/_mixins.scss
@@ -67,7 +67,7 @@
 
             .navigation-item-logo {
                 width: 200px;
-                filter: invert(100%);
+                filter: drop-shadow(0px 0px 1px white);
             }
         }
 
