--- a/resources/sass/pages/homepage/cta-careers.scss
+++ b/resources/sass/pages/homepage/cta-careers.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 55vh;
         background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%),
-        url('/assets/images/trucking.jpg');
+        url('/assets/images/Careers2.jpg');
         background-position: 85% 92%;
 
     .cta-careers {
