--- a/resources/sass/pages/homepage/work.scss
+++ b/resources/sass/pages/homepage/work.scss
@@ -87,7 +87,7 @@
                 }
 
                  .bg-effect-driver {
-                     background: url('/assets/images/road2.jpg');
+                     background: url('/assets/images/workforus.jpg');
                      background-size: cover;
                      -moz-filter: blur(13px);
                      -o-filter: blur(13px);
@@ -118,7 +118,7 @@
                 }                
 
                 .bg-effect-operator {
-                    background: url('/assets/images/operater.jpeg');
+                    background: url('/assets/images/operator1.jpg');
                     background-size: cover;
                     -moz-filter: blur(13px);
                     -o-filter: blur(13px);
