--- a/resources/sass/pages/services/content.scss
+++ b/resources/sass/pages/services/content.scss
@@ -155,7 +155,7 @@
         width: 100%;
         height: 55vh;
         background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%),
-            url('/assets/images/wheel.jpg');
+            url('/assets/images/services-about.jpg');
         background-position: 85% 72%;
         background-size: cover;
         margin-top: 7rem;
