--- a/public/css/main.css
+++ b/public/css/main.css
@@ -316,7 +316,7 @@
   box-shadow: 0px 0px 5px black;
 }
 .work-wrap .work-content .work-cards .driver .bg-effect-driver {
-  background: url("/assets/images/road2.jpg");
+  background: url("/assets/images/workforus.jpg");
   background-size: cover;
   -moz-filter: blur(13px);
   -o-filter: blur(13px);
@@ -343,7 +343,7 @@
   filter: none;
 }
 .work-wrap .work-content .work-cards .operator .bg-effect-operator {
-  background: url("/assets/images/operater.jpeg");
+  background: url("/assets/images/operator1.jpg");
   background-size: cover;
   -moz-filter: blur(13px);
   -o-filter: blur(13px);
@@ -360,7 +360,7 @@
 .cta-careers-wrap {
   width: 100%;
   height: 55vh;
-  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url("/assets/images/trucking.jpg");
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url("/assets/images/Careers2.jpg");
   background-position: 85% 92%;
 }
 .cta-careers-wrap .cta-careers {
@@ -514,13 +514,12 @@
   overflow: hidden;
 }
 .testimonials-wrap .bg-effect {
-  background: url("/assets/images/night-road.jpg");
+  background: url("/assets/images/pplsaid1.jpg");
   background-size: cover;
   background-attachment: fixed;
   -moz-filter: blur(13px);
   -o-filter: blur(13px);
   -ms-filter: blur(13px);
-  filter: grayscale(0.5) brightness(1.5) saturate(1.5);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -788,11 +787,12 @@
   height: 60vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
   clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/garage.jpg");
+  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/garage.jpeg");
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-position: 100% 60%;
 }
 .header-careers .navigation-list {
   text-shadow: 0px 0px 5px #0f0f0f;
@@ -1486,7 +1486,7 @@
 .services-content-wrap .cta-careers-wrap {
   width: 100%;
   height: 55vh;
-  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url("/assets/images/wheel.jpg");
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url("/assets/images/services-about.jpg");
   background-position: 85% 72%;
   background-size: cover;
   margin-top: 7rem;
