--- a/resources/sass/pages/homepage/services.scss
+++ b/resources/sass/pages/homepage/services.scss
@@ -38,6 +38,13 @@
             color: $dark-black;
         }
 
+        .services-content {
+            padding: 1rem 0;
+            font-size: 1.1rem;
+            color: $dark-black;
+            font-weight: 100;
+        }
+
         .services-title {
             color: $text-white;
             font-family: $styled-text;
