--- a/resources/sass/helpers/_mixins.scss
+++ b/resources/sass/helpers/_mixins.scss
@@ -92,7 +92,7 @@
 
             .navigation-mobile-logo {
                 width: 100px;
-                filter: invert(100%);
+                filter: drop-shadow(0px 0px 0px black);
             }
 
             .navigation-hamburger {
