--- a/resources/sass/pages/about/content.scss
+++ b/resources/sass/pages/about/content.scss
@@ -12,4 +12,10 @@
         margin-bottom: 2rem;
         text-shadow: 0px 0px 10px $text-white;
     }
+
+    .about-text {
+        color: $dark-black;
+        font-size: 1.2rem;
+        padding: 4rem 0;
+    }
 }
