--- a/resources/sass/pages/about/header.scss
+++ b/resources/sass/pages/about/header.scss
@@ -3,8 +3,8 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
     clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
     background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/about-header.jpg');
-    background-position: 100% 80%;
-    background-size: cover;
+    background-position: 100% 52%;
+    background-size: 100% 125%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,5 +16,10 @@
         font-size: 4rem;
         font-family: $styled-text;
         @include text-shadow();
+
+        @include mobile() {
+            margin-top: 10rem;
+        }
     }
+
 }
