--- a/resources/sass/pages/homepage/cta-careers.scss
+++ b/resources/sass/pages/homepage/cta-careers.scss
@@ -1,9 +1,10 @@
 .cta-careers-wrap {
     width: 100%;
     height: 55vh;
-        background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%),
-        url('/assets/images/Careers2.jpg');
-        background-position: 85% 92%;
+        background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgb(12 95 99 / 0%) 100%),
+        url('/assets/images/career-cta1.jpg');
+        background-position: 225% 222%;
+        background-size: cover;
 
     .cta-careers {
         @include center-content();
