--- a/resources/sass/pages/homepage/testimonials.scss
+++ b/resources/sass/pages/homepage/testimonials.scss
@@ -6,6 +6,7 @@
 
     .bg-effect {
         background: url('/assets/images/pplsaid1.jpg');
+        // background: url('/assets/images/career-cta2.jpg');
         background-size: cover;
         background-attachment: fixed;
         -moz-filter: blur(13px);
@@ -63,7 +64,7 @@
             justify-content: flex-end;
             align-items: start;
             background: linear-gradient(55deg, rgb(255 255 255 / 16%) 32%, rgb(208 87 15) 100%),
-            url('/assets/images/road.jpg');
+            url('/assets/images/people-said2.jpg');
             background-position: 0% 112%;
             background-attachment: fixed;
             background-size: cover;
