--- a/resources/sass/pages/services/header.scss
+++ b/resources/sass/pages/services/header.scss
@@ -6,7 +6,7 @@
     url(/assets/images/services-header.jpg);
     background-size: cover;
     display: flex;
-    background-position: 100% 80%;
+    background-position: 100% 108%;
     flex-direction: column;
     align-items: center;
 
@@ -17,5 +17,9 @@
         font-size: 4rem;
         font-family: $styled-text;
         @include text-shadow();
+
+        @include mobile() {
+            margin-top: 10rem;
+        }
     }
 }
